--- a/wp-content/themes/btrvalue/assets/css/style.scss
+++ b/wp-content/themes/btrvalue/assets/css/style.scss
@@ -611,6 +611,13 @@ h4,h5,h6 {
         position: absolute;
         width: 100%;
         bottom:10px;
-        right:0;        
+        right:0;
+        h1 {
+            font-size:83px;
+            font-weight: 400;
+            line-height: 1;
+            margin:0;
+            color: $dark_blue;
+        }
     }
 }
